--- a/style.css
+++ b/style.css
@@ -42,8 +42,10 @@ body, .pic-p, .pic-txt   {
 
 .row-item {
     color: white;
+    padding: 3px;
     text-decoration: none;
     flex-wrap: wrap;
+    border: 1px solid transparent;
 }
 
 .row-item:hover{
@@ -80,18 +82,20 @@ body, .pic-p, .pic-txt   {
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
+    margin: 5px;
 }
 
-.p-input {
+.input-item {
     padding: 0;
     margin: 0;
     text-align: center;
 }
 
-.p-aside {
+.aside-item {
     padding: 0;
     margin: 0;
     margin-top: 50px;
+    margin-bottom: 2px;
 }
 
 .input-button {
@@ -143,12 +147,12 @@ body, .pic-p, .pic-txt   {
     cursor: pointer;
 }
 
-.p-input-h {
+.input-item-h {
     margin-top: 20px;
     text-align: center;   
 }
 
-.p-input-f {
+.input-item-f {
     margin-bottom: 20px;
     text-align: center;   
 }
@@ -236,4 +240,10 @@ body, .pic-p, .pic-txt   {
     width: 200px;
     height: 250px;
     margin: 20px 20px;
+}
+
+.row-item:hover {
+    border: 1px solid goldenrod;
+    border-top-left-radius: 5px;
+    background-color: gray;
 }
